--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <center>
 <h1>Installing iCreate (Resigned)</h1>
-<h2>or click here<h2>
+<h2><a href="itms-services://?action=download-manifest&url=https://masckmaster2007.github.io/altcreate/install.plist">or click here</a><h2>
 </center>
 </body>
 </html>
